# gpu-proyecto

./: CMakeLists.txt  README.md
include/: application.h
include/core/: mesh.h  physics.h  tissue_params.h  verlet.h
include/cpu/: cpu_simulation.h
include/cuda/: cuda_simulation.h  kernels.cuh
include/opengl/: renderer.h  shader_simulation.h  utils.h
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: CMakeLists.txt  application.cpp  main.cpp
src/core/: mesh.cpp  mesh.h  physics.cpp  physics.h  verlet.cpp  verlet.h
src/cpu/: cpu_simulation.cpp  cpu_simulation.h
src/cuda/: cuda_simulation.cu  cuda_simulation.h  kernels.cu
src/opengl/: renderer.cpp  renderer.h  shader_simulation.cpp  shaders.h  utils.cpp
